tests/snapshots/type_error_mismatch.expected
-- TYPE ERROR ----------------------------------------------

test.gn:1:13

I found a type mismatch.

  One part has type:    Int
  Another part has:     String

  These types are not compatible.

1 | let x = 1 + "hello"
                ^^^^^^^
